infrastructure/base/ingressroutes/bitwarden.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bitwarden1.l.voltaicforge.com`)
      services:
        - name: external-minio
          port: 8093
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
---
apiVersion: v1
kind: Service
metadata:
  name: external-minio
spec:
  ports:
    - name: http
      port: 8093
  type: ExternalName
  externalName: 192.168.2.210
