infrastructure/base/ingressroutes/ingressroute-proxmox.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-tls
spec:
  entryPoints:
    - websecure
  dependsOn:
    - traefik
    - traefik-forward-auth
  routes:
    - kind: Rule
      match: Host(`proxmox.${CLUSTER_DOMAIN}`)
      services:
        - name: external-proxmox
          port: 80006
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    # - kind: Rule
    #   match: Host(`proxmox.${CLUSTER_DOMAIN}`) && PathPrefix(`/api`)
    #   services:
    #     - name: external-proxmox
    #       port: 80006
    #   middlewares:
    #     - name: traefik-secure-headers
    #       namespace: kube-system
    #     # - name: traefik-forward-auth
    #     #   namespace: kube-system

  tls:
    certResolver: cloudflare
---
apiVersion: v1
kind: Service
metadata:
  name: external-proxmox
spec:
  ports:
    - name: http
      port: 80
  type: ExternalName
  externalName: 192.168.2.22
